--- a/neural_nets1.qmd
+++ b/neural_nets1.qmd
@@ -1,11 +1,11 @@
 ---
 jupyter:
   jupytext:
-    formats: ipynb,py:hydrogen,qmd,md
+    formats: 'ipynb,py:hydrogen,qmd,md'
     text_representation:
-      extension: .md
-      format_name: markdown
-      format_version: '1.3'
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
       jupytext_version: 1.14.1
   kernelspec:
     display_name: Python(3.10.5)
